@@ -3,8 +3,8 @@ CPPFLAGS	= -g -Wall -O4 -Wextra
 CPP		= g++
 RM      	= rm
 LIBOBJS		= endflib.o endfio.o
-PRGOBJS		= decemf4.o decemf5.o decemf6.o decemf12.o decemacs.o
-PROG		= decemf4 decemf5 decemf6 decemf12 decemacs
+PRGOBJS		= decemf4.o decemf5.o decemf6.o decemf12.o decemacs.o deceangdist.o
+PROG		= decemf4 decemf5 decemf6 decemf12 decemacs deceangdist
 
 all:		$(PROG)
 
@@ -23,6 +23,9 @@ decemf12:	$(LIBOBJS) decemf12.o
 decemacs:	$(LIBOBJS) decemacs.o
 		$(CPP) decemacs.o $(LIBOBJS) $(LDFLAGS) -o decemacs
 
+deceangdist:	$(LIBOBJS) deceangdist.o
+		$(CPP) deceangdist.o $(LIBOBJS) $(LDFLAGS) -o deceangdist
+
 clean:
 		$(RM) -f $(LIBOBJS) $(PRGOBJS) $(PROG)
 
@@ -31,6 +34,7 @@ decemf5.o:	../source/endflib.h
 decemf6.o:	../source/endflib.h
 decemf12.o:	../source/endflib.h
 decemacs.o:	../source/endflib.h
+deceangdist.o:	../source/endflib.h
 endflib.o:	../source/endflib.cpp ../source/endflib.h
 		$(CPP) $(CPPFLAGS) ../source/endflib.cpp -c
 endfio.o:	../source/endfio.cpp ../source/endflib.h
