@@ -1,3 +1,8 @@
+2019-01-28  Toshihiko Kawano  <kawano@lanl.gov>
+
+	* tools/deceangdist.cpp: new file
+	tool to produce elastic angular distribution from file
+
 2018-10-25  Toshihiko Kawano  <kawano@lanl.gov>
 
 	* source/decetable2.cpp (DeceTableMF2URA): bug fixed
